--- a/dat/all_amino03.in
+++ b/dat/all_amino03.in
@@ -453,6 +453,51 @@ IMPROPER
  ND1  CD2  CG   CB
 
 DONE
+HISTIDINE GENERIC (=EPSILON)
+
+ HIS  INT     1
+ CORR OMIT DU   BEG
+   0.00000
+   1  DUMM  DU    M    0  -1  -2     0.000     0.000     0.000   0.00000
+   2  DUMM  DU    M    1   0  -1     1.449     0.000     0.000   0.00000
+   3  DUMM  DU    M    2   1   0     1.522   111.100     0.000   0.00000
+   4  N     N     M    3   2   1     1.335   116.600   180.000  -0.528120
+   5  H     H     E    4   3   2     1.010   119.800     0.000   0.281695
+   6  CA    CT    M    4   3   2     1.449   121.900   180.000   0.031249
+   7  HA    H1    E    6   4   3     1.090   109.500   300.000   0.085175
+   8  CB    CT    3    6   4   3     1.525   111.100    60.000  -0.152267
+   9  HB2   HC    E    8   6   4     1.090   109.500   300.000   0.054608
+  10  HB3   HC    E    8   6   4     1.090   109.500    60.000   0.054608
+  11  CG    CC    S    8   6   4     1.510   115.000   180.000   0.278406
+  12  ND1   NB    S   11   8   6     1.390   122.000   180.000  -0.423316
+  13  CE1   CR    B   12  11   8     1.320   108.000   180.000   0.025960
+  14  HE1   H5    E   13  12  11     1.090   120.000   180.000   0.126832
+  15  NE2   NA    B   13  12  11     1.310   109.000     0.000  -0.097984
+  16  HE2   H     E   15  13  12     1.010   125.000   180.000   0.266865
+  17  CD2   CW    S   15  13  12     1.360   110.000     0.000  -0.297563
+  18  HD2   H4    E   17  15  13     1.090   120.000   180.000   0.160413
+  19  C     C     M    6   4   3     1.522   111.100   180.000   0.662405
+  20  O     O     E   19   6   4     1.229   120.500     0.000  -0.528966
+
+CHARGE
+ -0.528120  0.281695  0.031249  0.085175 -0.152267
+  0.054608  0.054608  0.278406 -0.423316  0.025960
+  0.126832 -0.097984  0.266865 -0.297563  0.160413
+  0.662405 -0.528966
+
+
+LOOP
+ CG   CD2
+
+IMPROPER
+ -M   CA   N    H
+ CA   +M   C    O
+ CE1  CD2  NE2  HE2
+ CG   NE2  CD2  HD2
+ ND1  NE2  CE1  HE1
+ ND1  CD2  CG   CB
+
+DONE
 HISTIDINE PLUS
 
  HIP  INT     1
