Replaced PRO from AMBER Library to build from backbone. Data from zmatr build from an arbitrary Pro

--- a/dat/all_amino03.in
+++ b/dat/all_amino03.in
@@ -862,27 +862,20 @@ IMPROPER
 DONE
 PROLINE
 
- PRO  INT     1
+ PRO  INT     1 (Modified from open-babel)
  CORR OMIT DU   BEG
    0.00000
    1  DUMM  DU    M    0  -1  -2     0.000     0.000     0.000   0.00000
    2  DUMM  DU    M    1   0  -1     1.449     0.000     0.000   0.00000
    3  DUMM  DU    M    2   1   0     1.522   111.100     0.000   0.00000
    4  N     N     M    3   2   1     1.337   117.000   180.000  -0.088116
-   5  CD    CT    3    4   3   2     1.458   126.100   356.100  -0.011906
-   6  HD2   H1    E    5   4   3     1.090   109.500    80.000   0.043951
-   7  HD3   H1    E    5   4   3     1.090   109.500   320.000   0.043950
-   8  CG    CT    3    5   4   3     1.500   103.200   200.100   0.013059
-   9  HG2   HC    E    8   5   4     1.090   109.500   218.000   0.019574
-  10  HG3   HC    E    8   5   4     1.090   109.500    98.000   0.019574
-  11  CB    CT    B    8   5   4     1.510   106.000   338.300  -0.003351
-  12  HB2   HC    E   11   8   5     1.090   109.500   256.300   0.019352
-  13  HB3   HC    E   11   8   5     1.090   109.500   136.300   0.019352
-  14  CA    CT    M    4   3   2     1.451   120.600   175.200  -0.034577
-  15  HA    H1    E   14   4   3     1.090   109.500    60.000   0.059977
-  16  C     C     M   14   4   3     1.522   109.500   300.000   0.333720
-  17  O     O     E   16  14   4     1.229   120.500     0.000  -0.434559
-
+   5  CA    CT    M    4   3   2     1.464   120.600   175.200  -0.034577
+   6  C     C     M    5   4   3     1.508   109.500   300.000   0.333720
+   7  O     O     E    6   5   4     1.229   121.590   157.920  -0.434559
+   8  CB    CT    B    5   4   7     1.549   103.650   240.150  -0.003351
+   9  CG    CT    3    8   5   4     1.493   102.830   331.050   0.013059
+  10  CD    CT    3    4   5   6     1.484   111.720   124.390  -0.011906
+  
 CHARGE
  -0.088116 -0.011906  0.043951  0.043950  0.013059
   0.019574  0.019574 -0.003351  0.019352  0.019352
